# TeacherSKills

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
community/: skill_review_checklist.md
community/skill_template/: SKILL.md
examples/: demo_beike.md  demo_beike_professional.md  demo_chuti.md  demo_chuti_professional.md  demo_full_workflow.md  demo_gaijuan_professional.md  demo_jiaoan.md  demo_pingyu.md  demo_pingyu_professional.md  demo_xueqing.md  demo_xueqing_professional.md  demo_zujuan.md  demo_zujuan_professional.md  mcp_config.json
examples/sample_data/: chinese_knowledge_points.json  english_knowledge_points.json  math_knowledge_points.json  research_dossier_math_beike.json  research_dossier_math_exam.json  sample_knowledge_mastery.json  sample_lesson_plan.json  sample_math_student_answers.json  (+5 more)
examples_output/: questions.json
mcp_server/: __init__.py  stdio_server.py
server/: app.py  auth.py
shared/: api_client.py
tests/: test_api_client.py  test_beike.py  test_exam_assembly.py  test_exam_package.py  test_grading.py  test_jiaoan.py  test_learning_analysis.py  test_lesson_package.py  test_mcp_server.py  test_pingyu.py  test_question_gen.py  test_research_schemas.py  test_schemas.py  test_server_api.py  test_stage_e_packages.py
wiki/: 00-product-proposal.md  01-project-roadmap.md  02-system-architecture.md  05-glossary.md  06-conventions.md  10-stage-a.md  11-stage-b.md  12-stage-c.md  13-stage-d.md  14-stage-e.md  81-development-guide.md  85-backlog.md  90-CHANGELOG.md
(+56 files in other folders)
